--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1615,19 +1615,28 @@
     "Enter Number of Available Rooms": "Enter Number of Available Rooms",
     "Customize Prices": "Customize Prices",
     "Please choose dates first": "Please choose dates first",
-"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Edfapay to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to EdfaPay to finish complete your purchase",
-"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Square to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Square to finish complete your purchase",
-"Pay your order using one of the most trusted and secure platforms for online money transfers. You will be redirected to Zabeb to complete your purchase using your rewards":"Pay your order using one of the most trusted and secure platforms for online money transfers. You will be redirected to Zabeb to complete your purchase using your rewards",
-"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Ipay88 to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Ipay88 to finish complete your purchase",
-"Pay your order using the most known and secure platform for online money transfers. You will be redirected to PayPal to finish complete your purchase.":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to PayPal to finish complete your purchase.",
-"Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via Telegram. ... QR code. As you know, having to add a phone number toyour contacts in order to start up a Telegram message can take a little while":"Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via Telegram. ... QR code. As you know, having to add a phone number to your contacts in order to start up a Telegram message can take a little while",
-"Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via WhatsApp. ... QR code. As you know, having to add a phone number to your contacts in order to start up a WhatsApp message can take a little while":"Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via WhatsApp. ... QR code. As you know, having to add a phone number to your contacts in order to start up a WhatsApp message can take a little while",
-"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Mercado Pago to finish complete your purchase.":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Mercado Pago to finish complete your purchase.",
-"Pay your order using the most known and secure platform for online money transfers. You will be redirected to CoinGate to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to CoinGate to finish complete your purchase",
-"Safe money transfer using your bank account. We support Mastercard, Visa and Skrill":"Safe money transfer using your bank account. We support Mastercard, Visa and Skrill",
-"Enter Your Mobile Number":"Enter Your Mobile Number",
-"Enter Your Channel Code":"Enter Your Channel Code",
-"SR Currency is not currently supported in PayPal.":"SR Currency is not currently supported in PayPal."
+    "Pay your order using the most known and secure platform for online money transfers. You will be redirected to Edfapay to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to EdfaPay to finish complete your purchase",
+    "Pay your order using the most known and secure platform for online money transfers. You will be redirected to Square to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Square to finish complete your purchase",
+    "Pay your order using one of the most trusted and secure platforms for online money transfers. You will be redirected to Zabeb to complete your purchase using your rewards":"Pay your order using one of the most trusted and secure platforms for online money transfers. You will be redirected to Zabeb to complete your purchase using your rewards",
+    "Pay your order using the most known and secure platform for online money transfers. You will be redirected to Ipay88 to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Ipay88 to finish complete your purchase",
+    "Pay your order using the most known and secure platform for online money transfers. You will be redirected to PayPal to finish complete your purchase.":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to PayPal to finish complete your purchase.",
+    "Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via Telegram. ... QR code. As you know, having to add a phone number toyour contacts in order to start up a Telegram message can take a little while":"Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via Telegram. ... QR code. As you know, having to add a phone number to your contacts in order to start up a Telegram message can take a little while",
+    "Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via WhatsApp. ... QR code. As you know, having to add a phone number to your contacts in order to start up a WhatsApp message can take a little while":"Click to chat. The click to chat feature lets customers click an URL in order to directly start a chat with another person or business via WhatsApp. ... QR code. As you know, having to add a phone number to your contacts in order to start up a WhatsApp message can take a little while",
+    "Pay your order using the most known and secure platform for online money transfers. You will be redirected to Mercado Pago to finish complete your purchase.":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to Mercado Pago to finish complete your purchase.",
+    "Pay your order using the most known and secure platform for online money transfers. You will be redirected to CoinGate to finish complete your purchase":"Pay your order using the most known and secure platform for online money transfers. You will be redirected to CoinGate to finish complete your purchase",
+    "Safe money transfer using your bank account. We support Mastercard, Visa and Skrill":"Safe money transfer using your bank account. We support Mastercard, Visa and Skrill",
+    "Enter Your Mobile Number":"Enter Your Mobile Number",
+    "Enter Your Channel Code":"Enter Your Channel Code",
+    "SR Currency is not currently supported in PayPal.":"SR Currency is not currently supported in PayPal.",
+    "Solutions":"Solutions",
+    "Create New QR":"Create New QR",
+    "Create QR":"Create QR",
+    "Enter a valid mobile.":"Enter a valid mobile.",
+    "Manage Solutions":"Manage Solutions",
+    "Visit Dashboard":"Visit Dashboard",
+    "Add a new QR payment":"Add a new QR payment",
+    "QR Payments":"QR Payments"
+
 
 
 
